flux/cluster/apps/presidential-paradise/zookeeper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: presidential-paradise
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      name: zookeeper
      labels:
        app: zookeeper
    spec:
      imagePullSecrets:
        - name: xirion-registry-creds
      containers:
        - name: zookeeper
          image: registry.xirion.net/library/zookeeper:0.3.1 # {"$imagepolicy": "flux-system:zookeeper"}
          ports:
            - name: web
              containerPort: 8085
            - name: epmd
              containerPort: 4369
          resources: {}
          securityContext:
            privileged: false
            procMount: Default
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
